Updated terms of service and rating system

--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -51,6 +51,8 @@
 
   <p>As a courtesy, TOSfairness will make a reasonable effort to contact any company that is reviewed on the website (via email, if an email address is easily listed on the company terms of service or website) to inform the company that their website and/or app has been reviewed on TOSfairness.  We do this in order to give that company an opportunity to review its rating, and should the company so desire, to use our bill of rights, score, and suggestions for improvement to improve the terms for the next version of the agreement.</p>
 
+  <p><b>NOTE ABOUT GDPR (Global Data Protection Regulation of the European Union - Effective 5/25/2018)</b> - Although the GDPR regulations are an important regulation, we chose at this time not to include GDPR compliance as a factor in our bill of rights and ratings, even though many of its requirements echo some of our ideals.  Why?  First, it's unclear how implementation of GDPR will roll out and both large and small companies are still trying to determine precisely what is required.  Second, our bill of rights is based on overarching general common sense principles, and not any country's particular laws.  In the future, if we feel that certain provisions of the GDPR should be formally incorporated into our bill of rights and rating system, we shall update them accordingly.  Therefore, at this time, we are not using GDPR compliance as a factor in our ratings.</p>
+
   <!-- ***IF THIS SECTION CHANGES BELOW, ALSO UPDATE TERMS.HTML*** -->
   <h5>ARE YOU A USER OR SITE VISITOR?</h5>
   <ul>
