--- a/app/views/websites/terms.html.erb
+++ b/app/views/websites/terms.html.erb
@@ -7,14 +7,19 @@
   <div class="row">
     <div class="col-xs-12 col-md-9">
       <h4>4/28/2018</h4>
-        <h5>Our terms of service and privacy policy are based on the criteria set forth in the TOS Fairness Project Online User Bill Of Rights</h5>
+        <h5>Our terms of service and privacy policy are based on the criteria set forth in the TOS Fairness Project Online User Bill Of Rights.  Any minor amendments are effective immediately, and will be listed below in clear bullet points.  Please check back occasionally to review the latest amendments.</h5>
+
+        <h5>Minor Changes to This Agreement</h5>
+        <ul>
+          <li>NOT APPLICABLE</li>  
+        </ul>
 
         <h5>OUR EMAIL: info@breakdiving.org</h5>
 
         <h5>The Bullet Points</h5>
         <br>
           <ol>
-            <li><strong>The Right To Privacy:</strong> First, if you do not sign up, we do not collect any data about you at all except anonymous tracking data (such as from google analytics) to determine which part of the world people are visiting from.  If you do sign up, we will NEVER sell, rent, or share any of your personal information with others without your express permission.  If you sign up, your full name is never posted.  When you delete your account, we do not store any of your data on our servers. We will only release your private info to a government agent or law enforcement department or officer upon being presented with a lawful subpoena or are otherwise required to do so by law.  If you register as a user, we (Break Diving, Inc.) may add you to our email list, and at times, email you, but you may unsubcribe at any time.  Upon signup, we recommend (but do not require) that you send us an email immediately (see email above) with your full legal name, legal address, photo, two alternate email addresses that you have access to, two cell phones you have access to, and five security questions as well as answers.  We will file this information away, and only make use of it to verify your identity should you get locked out of your account and do not have access to the email account you used to sign up.  This is important because often, we change phone numbers, but forget that we have that number on file with an online service provider.  Then, someone else ports that number.  If they know you also have an account with us, they could use that number to attempt to steal your identity.  For this reason, a) if you change your phone number, you MUST let us know as soon as possible!, and b) when trying to prove identity, we will also consider signed and notorized affidavits, government issued IDs, other users who can vouch for your identity, etc. to help prove you are who you say you are.  While we will make every effort to help you prove your identity, if we cannot prove it to our satisfaction, we have no obligation to provide you with access to the account, so please, share as much of the above information with us as you are comfortable, because it will make your account recovery that much more likely.</li>
+            <li><strong>The Right To Privacy:</strong> First, if you do not sign up, we do not collect any data about you at all except anonymous tracking data (such as from google analytics) to determine which part of the world people are visiting from.  If you do sign up, we will NEVER sell, rent, or share any of your personal information with others without your express permission.  If you sign up, your full name is never posted.  When you delete your account, we do not store any of your data on our servers. We will only release your private info to a government agent or law enforcement department or officer upon being presented with a lawful subpoena or are otherwise required to do so by law.  If you register as a user, we (Break Diving, Inc.) may add you to our email list, and at times, email you, but you may unsubcribe at any time.  Upon signup, we recommend (but do not require) that you send us an email immediately (see email above) with your full legal name, legal address, photo, two alternate email addresses that you have access to, two cell phones you have access to, and five security questions as well as answers.  We will file this information away, and only make use of it to verify your identity should you get locked out of your account and do not have access to the email account you used to sign up.  This is important because often, we change phone numbers, but forget that we have that number on file with an online service provider.  Then, someone else ports that number.  If they know you also have an account with us, they could use that number to attempt to steal your identity.  For this reason, a) if you change your phone number, you MUST let us know as soon as possible!, and b) when trying to prove identity, we will also consider signed and notorized affidavits, government issued IDs, other users who can vouch for your identity, etc. to help prove you are who you say you are.  While we will make every effort to help you prove your identity, if we cannot prove it to our satisfaction, we have no obligation to provide you with access to the account, so please, share as much of the above information with us as you are comfortable, because it will make your account recovery that much more likely.  Note: all of your date is hosted on Heroku, which is the data server on which we host the website.</li>
             <br>
             <li><strong>The Right to Equal, Fair, &amp; Reasonable Expression:</strong> As a registered user, you can say anything here that you want in your public ratings, as long as you express yourself (using a reasonable person standard) in a mature way, without profanity, and don't make posts that belittle an individual or that may result in direct physical harm or direct self-harm to others.  Any user rating of a company's terms of service/privacy policy must be backed up with a story that justifies your rating, i.e. instead of saying "This company sucks!" please explain what the company did that makes you feel that way, i.e. "They kicked me off simply because I expressed my opinion."  If your rating of a company does not include a clear explanation for your score, we will give you a reasonable opportunity to address it.  If you do not address it, we may remove your rating as a courtesy to the rated company.  Further, we reserve the right to remove any rating we determine to be fake, created by a bot, or that appears to be simply vindictive--the more specifically you write, and the less similar each of your reviews, the better we can tell if a review is sincere.  We will give you an opportunity to defend your review prior to it being removed.</li>
             <br>
@@ -48,14 +53,6 @@
               <li><b>UPDATES TO BILL OF RIGHTS OR RATING SYSTEM:</b> We update the bill of rights and rating system whenever we feel it deserves such attention to improve our service to users worldwide.  Please check back on theose respective pages to be notified of changes.</li>
             </ul>
 
-    </div>
-
-    <div class="col-xs-12 col-md-3">
-      <h4>Minor Changes to This Agreement</h4>
-        <ul>
-          <li>NOT APPLICABLE</li>
-          
-        </ul>
     </div>
 
     <div class="col-xs-12 col-md-3">
