Fixed html on rating system page

--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -5,7 +5,9 @@
 
   <p>In order to help preserve each users bill of rights, and in order to provide each user with a clear idea of what he or she is signing, each contract terms of service reviewed on this site is given a rating, from 0 - 100, with 100 being the most fair.</p>
 
-  <p>Each agreement is first rated on a 0 - 50 scale, using the following criteria from our online user <a href="/bill_of_rights.html">bill of rights</a>.
+  <h2>Part 1</h2>
+
+  <p>Each agreement is first rated on a 0 - 50 scale, using the following criteria from our online user <a href="/bill_of_rights.html">bill of rights</a></p>.
 
   <ol>
     <!-- NUMBER ONE -->
@@ -30,7 +32,11 @@
     <li><b>The Right to Reasonable Terms</b> - Up to 5 Points</li>
   </ol>
 
-  <p>This initial bill of rights (explained in depth on the <a href="/bill_of_rights.html">bill of rights</a> page) provides an initial potential total of 50 points based on the contract itself.  An additional 50 points are granted as follows based on all prior related versions of that Terms of Service agreement:</p>
+  <p>This initial bill of rights (explained in depth on the <a href="/bill_of_rights.html">bill of rights</a> page) provides an initial potential total of 50 points based on the contract itself.</p>  
+
+  <h2>Part 2</h2>
+
+  <p>An additional 50 points are granted as follows based on all prior related versions of that Terms of Service agreement:</p>
 
   <ul>
     <li><b>Historical Fairness</b> - Up to 10 Points</li>
@@ -43,6 +49,8 @@
       <p>Does the company place its TOS Rating Score prominently and publicly on the homepage itself?  Does it also place its TOS Rating Score prominently on the actual Terms of Service signature page (ideally, directly next to the 'clickbox')?  Is each listing clickable to that company's terms of service rating page for that terms of service on our website?  It should read, at minimum: "TOS Fairness Rating: #/100" (with # replaced by the score and 'Read more' linking to our website's rating page for that company).  For now, a company's initial score will automatically include the 20 points, and if the company does not add the score within 10 days of being reviewed, and then 20 days, and/or fails to let us know that the score has been properly added, the points will be removed from the score and updated on our website accordingly.  It is the company's responsibility to check back frequently to see if the score has changed, and to inform us when the score and links have been placed properly: info@breakdiving.org.</p>
   </ul>
 
+  <h2>Summary</h2>
+
   <p>Together, this all comes to 100 points.  The higher the score, the more fair the agreement.  In general, a score of 90 or above is "Excellent"; 80 or above is considered "Reasonable"; 70 or above is considered "Be Cautious"; Below 70 is considered "Read Carefully Before Signing" and anything below 25 should probably be avoided at all costs, or USE AT YOUR OWN RISK BECAUSE YOU HAVE GIVEN UP NEARLY ALL OF YOUR RIGHTS IF YOU USE THAT SERVICE!</p>
 
   <p>Companies that follow and adhere to the bill of rights, and treat customers fairly and with respect, will come closest to earning the coveted, but rarely earned, 100.</p>
@@ -54,13 +62,13 @@
   <p><b>NOTE ABOUT GDPR (Global Data Protection Regulation of the European Union - Effective 5/25/2018)</b> - Although the GDPR regulations are an important regulation, we chose at this time not to include GDPR compliance as a factor in our bill of rights and ratings, even though many of its requirements echo some of our ideals.  Why?  First, it's unclear how implementation of GDPR will roll out and both large and small companies are still trying to determine precisely what is required.  Second, our bill of rights is based on overarching general common sense principles, and not any country's particular laws.  In the future, if we feel that certain provisions of the GDPR should be formally incorporated into our bill of rights and rating system, we shall update them accordingly.  Therefore, at this time, we are not using GDPR compliance as a factor in our ratings.</p>
 
   <!-- ***IF THIS SECTION CHANGES BELOW, ALSO UPDATE TERMS.HTML*** -->
-  <h5>ARE YOU A USER OR SITE VISITOR?</h5>
+  <h2>ARE YOU A USER OR SITE VISITOR?</h2>
   <ul>
     <li><b>ACCURACY:</b> We make a reasonable effort to ensure that each attorney or law student reviews each contract in a fair, impartial, objective, and accurate manner using the bill of rights and rating system to guide the ratings.  Only licensed attorneys, former attorney, and final year law students are accepted onto our rating team, and they each must have have strong familiarity with contracts.  However, to err is human, so while our intent is to be fully accurate with each rating, an oversight or inaccuracy may occasionally slip in unintentionally.  If this is the case, and you find such an oversight or inaccuracy, we ask that you state this in the user reviews section and also send us an email (see top) to help us improve.  We will review the perceived inaccuracy and if proven valid, we will update the review as soon as we can, based on staff availability.</li>
     <li><b>NOT LEGAL ADVICE:</b> The reviews on this website are merely a public service. No reviews on this website are to be considered legal advice. Each review is merely one potential analysis. Remember that each 'Click to Agree' agreement is (in most jurisdictions) deemed to be a binding contract between you and the company. Therefore, before making any final decision on whether to sign any online agreement, if you are uncertain, please be sure to read the contract in full, and if you are still confused, consult a licensed attorney in your country or state.  Use of this website does not in any way create any lawyer-client relationship anywhere in the world.  Posting of reviews on this website is not deemed to be the practice of law in any jurisdiction because there is no specified client, because the agreements are not being analyzed under the laws of any particular jurisdiction, and because we urge each site visitor to consult an attorney in his or her jurisdiction prior to signing any agreement.  The lens through which we analyze these agreements is simple common sense and general fairness from the point of view of a standard user.  Therefore, these reviews should in all situations simply be considered the public posting of research which others may feel free to disagree with.</li>
   </ul>
 
-  <h5>ARE YOU A COMPANY?</h5>
+  <h2>ARE YOU A COMPANY?</h2>
   <ul>
     <li><b>FAIR REVIEW:</b> You have the right to a fair review based wholly on the objective criteria we have presented in our bill of rights and rating system.  We make every effort to ensure that personal feelings are kept out of the reviews, because each attorney, former attorney, or law student is entitled to share his or her personal use feelings as a regular user.</li>
     <li><b>ADDRESSING INACCURACIES:</b> You have the right to address any perceived inaccuracies you feel we have posted about your company by sending an email to us (see top of agreement for our email address).  We will look at any information you present to us, and make a fair and timely effort based on our current staffing situation to determine if one of our reviewers was inaccurate.  We will make a reasonable effort to promptly update any information that we agree is inaccurate.</li>
