--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -73,7 +73,7 @@
   <ul>
     <li><b>FAIR REVIEW:</b> You have the right to a fair review based wholly on the objective criteria we have presented in our bill of rights and rating system.  We make every effort to ensure that personal feelings are kept out of the reviews, because each attorney, former attorney, or law student is entitled to share his or her personal use feelings as a regular user.</li>
     <br>
-    <li><b>ADDRESSING INACCURACIES:</b> You have the right to address any perceived inaccuracies you feel we have posted about your company by sending an email to us (see top of agreement for our email address).  We will look at any information you present to us, and make a fair and timely effort based on our current staffing situation to determine if one of our reviewers was inaccurate.  We will make a reasonable effort to promptly update any information that we agree is inaccurate.</li>
+    <li><b>ADDRESSING INACCURACIES:</b> You have the right to address any perceived inaccuracies you feel we have posted about your company by sending an email to us.  We will look at any information you present to us, and make a fair and timely effort based on our current staffing situation to determine if one of our reviewers was inaccurate.  We will make a reasonable effort to promptly update any information that we agree is inaccurate.</li>
     <br>
     <li><b>UPDATES TO BILL OF RIGHTS OR RATING SYSTEM:</b> We update the bill of rights and rating system whenever we feel it deserves such attention to improve our service to users worldwide.  Please check back on this page frequently to be notified of changes</li>
   </ul>
