--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,11 @@
             <li class="nav-item">
               <a class="nav-link" href="/donate">Donate</a>
             </li>
+            <% if user_signed_in? && current_user.admin? %>
+              <li class="nav-item">
+                <%= link_to "Update Request List", update_requests_path, :class => "nav-link" %>
+              </li>
+            <% end %>
           </ul>
           <ul class="navbar-nav justify-content-end">
             <% if user_signed_in? %>
