Made adjustments and added links to pages where user can request an updated review

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container pt-5">
   <h2>Alphabetical List of Entries by Company Name</h2>
-  <p>Note: This list shows companies with both reviewed contracts and also those waiting to be reviewed.  Click 'view' to see a list of contracts associated with that company.  If you don't find what you are looking for, use the form at the bottom to add that company to our waiting list.</p>
+  <p>Note: This list shows companies with reviewed contracts, with update requests, and also those waiting to be reviewed that met your search criteria.  Click 'view' to see a list of contracts associated with that company.  If you don't find what you are looking for, or need to request a review of an updated version of an already reviewed TOS, use the form at the bottom.</p>
   <br />
   <div class="row">
     <div class="col-md-8">
@@ -25,9 +25,9 @@
   </div>
   <div class="row">
     <div class="col-md-7">
-      <strong>Didn't find what you are looking for?</strong>
-      <p>Use the form below to add it to our waiting list!
-      Our team of volunteer attorneys will get to it as soon as they can!</p>
+      <h3><strong>Didn't find what you are looking for?</strong></h3>
+      <h3><strong>Need to request review of an updated TOS?</strong></h3>
+      <p>Use the form below to add the new company to our waiting list, or to request a review of a recently updated TOS, Privacy Policy, etc!  Our team of volunteers will get to it as soon as they can!</p>
       <%= render 'form', company: @company %>
     </div>
   </div>
