Updated rating system page

--- a/app/views/shared/_fine_print.html.erb
+++ b/app/views/shared/_fine_print.html.erb
@@ -1,4 +1,8 @@
+<!-- **IF YOU UPDATE THIS TEXT, ALSO UPDATE LARGE_FINE_PRINT AND THE TERMS OF SERVICE** -->
+
 <br />
 <p><small>The reviews on this website are merely a public service. No reviews on this website
-are to be considered legal advice. Each review is merely one potential analysis. Remember that each 'Click to Agree' agreement is (in most jurisdictions) deemed to be a binding contract between you and the company. Therefore, before making any final decision on whether to sign any online agreement, if you are uncertain, please be sure to read the contract in full, and if you are still confused, consult a licensed attorney in your country or state.  Use of this website does not in any way create any lawyer-client relationship anywhere in the world. Click here to read our full <a href="/terms.html">terms of service and privacy policy</a>.</small></p>
+are to be considered legal advice. Each review is merely one potential analysis. <strong>Check that the date of the agreement on a company's website matches the date of the version that we have reviewed.</strong>  Remember that each 'Click to Agree' agreement is (in most jurisdictions) deemed to be a binding contract between you and the company. Therefore, before making any final decision on whether to sign any online agreement, if you are uncertain, please be sure to read the contract in full, and if you are still confused, consult a licensed attorney in your country or state.  Use of this website does not in any way create any lawyer-client relationship anywhere in the world. Click here to read our full <a href="/terms.html">terms of service and privacy policy</a>.</small></p>
 <br />
+
+<!-- **IF YOU UPDATE THIS TEXT, ALSO UPDATE LARGE_FINE_PRINT AND THE TERMS OF SERVICE** -->
