edited search placeholder in websites#index

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -314,6 +314,7 @@ ul.contract-revision-list {
     margin-left: auto;
     margin-right: auto;
   }
+  .main-search {text-align: center;}
   #hero { height: 100%; }
   .search-index { width: 100%; }
   .contract-info-table td.note {
