Added image to break diving page

--- a/app/views/websites/break_diving.html.erb
+++ b/app/views/websites/break_diving.html.erb
@@ -1,11 +1,34 @@
-<br><br>
+<img class="img-fluid w-25 mx-auto" src="http://www.breakdiving.org/images/bd-logo.png"></img>
+
+<!-- Material sourced from breakdiving's about page -->
 <div class="col-10 offset-1 col-sm-8 offset-sm-2 card form">
 
-  <h1>What is Break Diving?</h1>
+  <h3>WHAT IS BREAK DIVING?</h3>
 
-  <p>Break Diving, Inc. is the 501(c)(3) parent company of the Terms of Service Fairness Project.  TOS Fairness is brought to you by Break Diving, Inc.</p>
+  <p>Break Diving is the lost art of finding and creating opportunity. Instead of waiting for opportunities to float to the surface, break divers dive right in to the cold, icy, shark-infested waters of resistance and find and make their own breaks.
 
-  <p><a href="http://www.breakdiving.org">Read more about us.</a>
-   
-  <p><a href="http://www.breakdiving.org/community">Join our free international online community</a> of other people who want to help you succeed.</p>
+  </p><h3>HOW DOES BREAK DIVING HELP PEOPLE</h3>
+
+  <p>We offer a huge number of programs that help people feel good about themselves, find happiness and friendship, and reach and sustain success.
+
+  </p><h3>WHAT’S THE PSYCHOLOGY BEHIND THIS &amp; HOW DO YOU BENEFIT?</h3>
+
+  <p>Founder Dr. Monroe Mann, PhD has a PhD in psychology, and he believes there are three major roadblocks when it comes to success:</p>
+  <div class="pl-5">
+    <ol>
+      <li>Poor Vision &amp; Planning: Not having clear, measurable, and ambitious goals.</li>
+      <li>Poor Attitude &amp; Support: Not having the motivation, confidence, and support to pursue those goals.</li>
+      <li>Poor Strategy &amp; Business Sense: Not knowing exactly what to do to achieve those goals.</li>
+    </ol>
+  </div>
+
+  <p>So first you need goals. Then you need the motivation to pursue them. Finally, you need to actually know how. Goals. Motivation. Plan.</p>
+
+  <p>Break Diving solves all three of those issues. Through the dive list and program, we help provide the vision and planning. Through the peer-networking support groups and events, we help provide the attitude and support. And finally, through
+    the top-down mentorship and support program that is infused in our community, we help provide the strategy and business sense.</p>
+
+  <p>Bottom line: if you want to succeed in life, you have found your new family.</p>
+  
+  
+  <p> <a href="http://www.breakdiving.org">Read more</a> about us or <a href="http://www.breakdiving.org/community">Join</a> our free international online community of other people who want to help you succeed. </p>
 </div>
