Started upvote feature functionality

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -11,6 +11,7 @@
               <th scope="col">Company Name</th>
               <th scope="col">Website</th>
               <th scope="col">Status</th>
+              <th scope="col">Vote</th>
               <th scope="col"></th>
             </tr>
           </thead>
