Added a missing bracket

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -149,6 +149,7 @@ ul.contract-revision-list {
   margin: 1em 0 2em;
   color: red;
   font-size: 1.2em;
+}
 
 .features-col li a {
   text-decoration: none;
