--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -14,4 +14,16 @@
   </td>
   <td><%= link_to 'View', company_contracts_path(company) %>
   </td>
+  <td>
+    <%= link_to like_link_path(link), method: :put do %>
+      Upvote
+      <%= link.get_upvotes.size %>
+    <% end %>
+  </td>
+  <td>
+    <%= link_to dislike_link_path(link), method: :put do %>
+      Downvote
+      <%= link.get_downvotes.size %>
+    <% end %>
+  </td>
 </tr>
