Corrects model's name

--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -17,13 +17,13 @@
   <td>
     <%= link_to like_company_path(company), method: :put do %>
       Upvote
-      <%= link.get_upvotes.size %>
+      <%= company.get_upvotes.size %>
     <% end %>
   </td>
   <td>
     <%= link_to dislike_company_path(company), method: :put do %>
       Downvote
-      <%= link.get_downvotes.size %>
+      <%= company.get_downvotes.size %>
     <% end %>
   </td>
 </tr>
