--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,8 @@
     <title>TOS Fairness Project</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application' %>
-    <%= javascript_include_tag 'application' %>
-
-    <!-- Bootstrap core CSS -->
-    <!-- <link href="../../dist/css/bootstrap.min.css" rel="stylesheet"> -->
-
-    <!-- Custom styles for this template -->
-    <!-- <link href="jumbotron.css" rel="stylesheet"> -->
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -85,26 +79,6 @@
 
           </div>
           <br />
-            <!-- <div class="col-md-5">
-            </div> -->
-            <!-- <div class="col-md-7">
-              <ul class="nav justify-content-end">
-                <li class="nav-item"><a class="nav-link" href="/index.html">TOS Fairness</a></li>
-                <li class="nav-item"><a class="nav-link" href="/terms.html">Terms &amp; Privacy</a></li>
-                <li class="nav-item"><a class="nav-link" href="/tax.html">Tax Info</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" href="/about.html">Contact us</a></li>
-                <li class="nav-item">
-                  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="UCB8FFTMURRAC">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif"  target="_blank" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                  </form>
-                </li>
-              </ul>
-            </div> -->
-          <!-- </div> -->
           <div class="row text-center footer-desktop">
             <div class='col-md-8 offset-md-2 col-sm-12'>
               <%= link_to 'TOS Fairness', root_path %>
@@ -127,16 +101,9 @@
         </div>
       </div>
 
-      <!-- Bootstrap core JavaScript
-      ================================================== -->
-      <!-- Placed at the end of the document so the pages load faster -->
       <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"></script>
       <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" crossorigin="anonymous" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"></script>
-      <!-- <script src="../../dist/js/bootstrap.min.js"></script> -->
-      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-      <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
-
     </div>
   </body>
 </html>
