"Added hyperlinks to Web Column and removed hyperlinks off Date column"

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -28,24 +28,28 @@
           <% @contracts.each_with_index do |contract, index| %>
             <tr>
               <th><%= contract.contract_title %></th>
-              <td><%= contract.website %></td>
-              <td><%= contract.application %></td>
-              <% contract.contract_revisions.each do |revision| %>
-                <li>
-                  <% if revision.tos_url.present? %>
-                    <a href="http://<%= revision.tos_url %>" target="_blank">
-                      <%= revision.contract_date.strftime('%m/%d/%Y') %>
-                    </a>
-                  <% end %>
-                </li>
-              <% end %>
-              <% if contract.contract_revisions.size > 0 %>
               <td>
                 <ul class="contract-revision-list">
                 <% contract.contract_revisions.each do |revision| %>
                   <li>
                     <% if revision.tos_url.present? %>
                       <a href="http://<%= revision.tos_url %>" target="_blank">
+                        <%= contract.website %>
+                      </a>
+                    <% else %>
+                      <%= contract.website %>
+                    <% end %>
+                  </li>
+                <% end %>
+                </ul>
+              </td>
+              <td><%= contract.application %></td>
+              <% if contract.contract_revisions.size > 0 %>
+              <td>
+                <ul class="contract-revision-list">
+                <% contract.contract_revisions.each do |revision| %>
+                  <li>
+                    <% if revision.tos_url.present? %>
                         <%= revision.contract_date.strftime('%m/%d/%Y') %>
                       </a>
                     <% else %>
