Changed Column Headers

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -15,10 +15,10 @@
         <thead class="thead-default">
           <tr>
             <th>Title</th>
-            <th>Website</th>
-            <th>Application</th>
-            <th>Date</th>
-            <th>Total Rating</th>
+            <th>Link to Terms</th>
+            <th>Company</th>
+            <th>Date of Terms</th>
+            <th>Rating</th>
             <th>Type</th>
             <th> </th>
             <th> </th>
