--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -12,6 +12,17 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+//Donation button styling
+input.btn-donate {
+  background-color: #f09c26;
+  border: solid 1px #f09c26;
+  width: 110px;
+  margin: 10px 0;
+  border-radius: 15px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
 
 #flex-content-container {
   -webkit-box-flex: 1;
