Adjusted badge rating system

--- a/app/views/websites/bill_of_rights.html.erb
+++ b/app/views/websites/bill_of_rights.html.erb
@@ -2,6 +2,8 @@
 
 <div class="col-10 offset-1 col-sm-8 offset-sm-2 card form">
 
+  <!--IF ANYTHING CHANGES ON THIS PAGE, SHARE THE UPDATES AT BOTTOM OF PAGE-->
+
   <h3>The TOS Fairness Project</h3>
   <h1>Online User Bill of Rights</h1>
   <h4>Version 1.0 by TOS Fairness Volunteer Attorneys</h4>
