--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -32,6 +32,8 @@
     <li><b>The Right to Reasonable Terms</b> - Up to 5 Points</li>
   </ol>
 
+  <!--IF ANYTHING CHANGES ON THIS PAGE, BE SURE TO INDICATE THE CHANGES AT BOTTOM-->
+
   <p>This initial bill of rights (explained in depth on the <a href="/bill_of_rights.html">bill of rights</a> page) provides an initial potential total of 50 points based on the contract itself.</p>  
 
   <h2>Part 2</h2>
@@ -46,7 +48,7 @@
     <li><b>Historical Lack of Lawsuits or Arbitrations</b> - Up to 10 Points</li>
       <p>Has the company had very few consumer initiated lawsuits or arbitrations over the last 5 years arising out of this or prior iterations of this terms of service?  The fewer legal issues that arrive in courts or in arbitration halls, the higher this number will be.  This score starts at 10, and drops as each court or arbitration battle is documented. Note: if the TOS prohibits users from publicly talking to the press about any lawsuits or arbitration, we will assume that at least 5 lawsuits or arbitration events have occurred, and will deduct 5 points automatically, even if it's a new TOS.</p>
     <li><b>Public Placement of TOS Rating Score</b> - Up to 20 points</li>
-      <p>Does the company place its TOS Rating Score prominently and publicly on the homepage itself?  Does it also place its TOS Rating Score prominently on the actual Terms of Service signature page (ideally, directly next to the 'clickbox')?  Is each listing clickable to that company's terms of service rating page for that terms of service on our website?  It should read, at minimum: "TOS Fairness Rating: #/100" (with # replaced by the score and 'Read more' linking to our website's rating page for that company).  Is it clearly listed on any mobile app?  For now, a company's initial score will automatically include the 20 points, and if the company does not add the score within 10 days of being reviewed, and then 20 days, and/or fails to let us know that the score has been properly added, points will be removed from the score and updated on our website accordingly.  It is the company's responsibility to check back frequently to see if the score has changed significantly, and to inform us when the score and links have been placed properly: info@breakdiving.org.</p>
+      <p>Does the company place its TOS Rating Score prominently and publicly on the homepage itself?  Does it also place its TOS Rating Score prominently on the actual Terms of Service signature page (ideally, directly next to the 'clickbox')?  Is each listing clickable to that company's terms of service rating page for that terms of service on our website?  It should read, at minimum: "TOS Fairness Rating: #/100" (with # replaced by the score and 'Read more' linking to our website's rating page for that company).  Is it clearly listed on any mobile app?  A company's initial score will automatically be 0 until the company lets us know that the score and link have been properly added a) on the homepage, and b) on the signup page next to the checkbox.</p>
   </ul>
 
   <h2>Summary</h2>
@@ -81,7 +83,7 @@
 
   <h5>RECENT CHANGES</h5>
     <ul>
-      <li>None so far.</li>
+      <li>11/1/18 - Modified the rating system.  Each company starts out with a badge score of 0, and if the company adds the link and score appropriately, and informs us, that score can increase to 10, and then to 20.</li>
     </ul>
 
 </div>
