--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -15,15 +15,11 @@
   <td><%= link_to 'View', company_contracts_path(company) %>
   </td>
   <td>
-    <%= link_to like_company_path(company), method: :put do %>
-      Upvote
-      <%= company.get_upvotes.size %>
-    <% end %>
-  </td>
-  <td>
-    <%= link_to dislike_company_path(company), method: :put do %>
-      Downvote
-      <%= company.get_downvotes.size %>
+    <% if company.request_count > 0 || company.contract_count == 0 %>
+      <%= link_to like_company_path(company), method: :put do %>
+        Upvote
+        <%= company.get_upvotes.size %>
+      <% end %>
     <% end %>
   </td>
 </tr>
